Refer to all-in-one package

--- a/action.yml
+++ b/action.yml
@@ -38,7 +38,7 @@ inputs:
     default: author, action, workflow
 runs:
   using: node12
-  main: lib/main.js
+  main: dist/index.js
 branding:
   icon: message-circle
   color: purple
